<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_baseline_local_dining_24"
        android:title="@string/title_order" />
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/title_info" />

</menu>